# Piano_Blocks

./: CMakeLists.txt  LICENSE  README.md  lv_conf.h  lv_mygec_font.h  main.c
my_code/inc/: game_logic.h  ui_manager.h  utils.h
my_code/src/: game_logic.c  ui_manager.c  utils.c
